# chriscarl.tools.analyze-disk-performance

./: .gitignore  .pylintrc  LICENSE  NOTES.md  README.md  app.py  benchmarks.py  constants.py  flow.py  input_output.py  lib.py  main.py  pyproject.toml  requirements.txt  smart.py  stdlib.py  system.py  third.py
notes/: create-partitions-output.json  read-disks-output.json  step-3-DiskInfo.txt
notes/crystaldiskinfo/: sata+m.2+u.2+external.txt  sata+optane.txt
scripts/old/: v2.py
scripts/win32/: admin.ps1  create-partitions.ps1  delete-partitions.ps1  read-disks.ps1  read-partitions.ps1
tests/: test_stdlib.py
