[tool.poetry]
name = "analyze-disk-performance"
version = "0.1.0"
description = "basically I hate using FIO, CrystalDiskMark, etc, lemme write something quick that does everything I want and I understand it all."
authors = ["Chris Carl <chrisbcarl@outlook.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pandas = ">1.22.0"
psutil = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
